# response-codes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: linting.yml  mypy.yml  tests.yml
src/http_status/: __init__.py
src/response_codes/: _1xx_informational.py  _2xx_success.py  _3xx_redirection.py  _4xx_client_errors.py  _5xx_server_errors.py  __init__.py  _core.py  _groups.py  _is_category.py
tests/: __init__.py  test_categories.py  test_client_errors.py  test_core.py  test_groups.py  test_http_status.py  test_informational.py  test_redirection.py  test_response_codes.py  test_server_errors.py  test_success.py
