[project]
name = "http-response-codes"
version = "0.4.0"
description = "A comprehensive Python library providing HTTP status code constants and exceptions"
authors = [{ name = "Grant Ramsay", email = "seapagan@gmail.com" }]
requires-python = ">=3.9"
dependencies = []
readme = "README.md"
license = { text = "MIT" }
keywords = ["http", "status", "codes", "exceptions", "response"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/seapagan/response-codes"
Repository = "https://github.com/seapagan/response-codes"
Documentation = "https://github.com/seapagan/response-codes#readme"
"Bug Tracker" = "https://github.com/seapagan/response-codes/issues"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "response_codes"

[dependency-groups]
dev = [
    "mock>=5.1.0",
    "mypy>=1.4.1",
    "poethepoet>=0.19.0",
    "prek>=0.2.27",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-sugar>=1.0.0",
    "pytest-watcher>=0.4.3",
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "PGH003",
    "D203",
    "D212",
    "N801",   # in this library we want to relaxe the class name rule
    "N818",   # relax exception name rule
]
extend-ignore = ["COM812", "ISC001"] # these are ignored for ruff formatting
select = ["ALL"]


[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    # we can (and MUST!) use 'assert' in test files.
    "ANN001",  # annotations for fixtures are sometimes a pain for test files
    "ARG00",   # test fixtures often are not directly used
    "PLR2004", # magic numbers are often used in test files
    "SLF001",  # sometimes we need to test private methods
]
"src/**/__init__.py" = [
    "RUF022", # __all__ order is intentional (grouped by status code range)
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.pep8-naming]
classmethod-decorators = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["response_codes"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.poe.tasks]
pre.cmd = "prek run --all-files"
pre.help = "Run pre-commit checks"

mypy.cmd = "mypy . --strict"
mypy.help = "Run mypy checks"
format.cmd = "ruff format ."
format.help = "Format code with Ruff"
ruff.cmd = "ruff check --output-format=concise ."
ruff.help = "Run Ruff checks"

test.cmd = "pytest"
test.help = "Run tests using Pytest"
"test:watch".cmd = "ptw . --now --clear"
"test:watch".help = "Run tests using Pytest in watch mode"

changelog.cmd = "github-changelog-md"
changelog.help = "Generate a changelog"

"docs:publish".cmd = "mkdocs gh-deploy"
"docs:publish".help = "Publish documentation to GitHub Pages"
"docs:build".cmd = "mkdocs build"
"docs:build".help = "Build documentation locally to './site' folder"
"docs:serve".cmd = "mkdocs serve -w TODO.md -w CHANGELOG.md -w CONTRIBUTING.md"
"docs:serve".help = "Serve documentation locally"
"docs:serve:all".cmd = "mkdocs serve -w TODO.md -w CHANGELOG.md -w CONTRIBUTING.md -a 0.0.0.0:9000"
"docs:serve:all".help = "Serve documentation locally on all interfaces"

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-report",
    "term-missing",
    "--cov-report",
    "html",
    "--cov-report",
    "lcov",
]
pythonpath = ["src"]
filterwarnings = []
mock_use_standalone_module = true
markers = []

[tool.coverage.run]
source = ["response_codes"]
omit = ["*/tests/*"]
